<resources>
    <string-array name="languages_array">
        <item>Select Language</item>
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>

    <string-array name="role_array">
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>

    <string name="app_name">iHealth</string>

    <string name="credit_info">Final Project: Mobile Programming (Theory)\nHealth Care App\n\nCourse Lecturer: MSc. Nguyễn Thái Công Nghĩa\n\nTeam Member:\nHồ Hoàng Nghiệp - 20200277\nNguyễn Trung Quân - 20200319\nNguyễn Tiến Trung - 20200382</string>

    <string name="profile">Medical Profile</string>
    <string name="appointment">Medical Appointment</string>
    <string name="phone">Emergency Service</string>
    <string name="search">Health Wiki</string>

    <string name="profile_menu_bar_name">Medical Profile</string>
    <string name="appointment_menu_bar_name">Pick an Appointment</string>
    <string name="phone_emergency_menu_bar_name">Emergency Service</string>
    <string name="search_wiki_menu_bar_name">Health Wiki Assistant</string>
    <string name="settings_menu_bar_name">Application Settings</string>
    <string name="settings_language_switch">Language</string>
    <string name="sign_in_btn_label">Log in</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="sign_up_btn_label">Sign up</string>
    <string name="username_input_label">Email:</string>
    <string name="password_input_label">Password:</string>
    <string name="sign_out_btn_label">Log out</string>
    <string name="create_account_btn">Create Account</string>
    <string name="password_confirm_label">Confirm Password:</string>
    <string name="toast_pwd_confirm_mismatch">Confirm password mismatch</string>
    <string name="toast_auth_failed">Authentication failed</string>
    <string name="toast_empty_field">You must fill in all fields</string>
    <string name="toast_auth_succeeded">Authentication succeded</string>
    <string name="generic_cancellation">Cancel</string>
    <string name="toast_sign_in_failed">Sign in failed</string>
    <string name="toast_sign_in_succeeded">Sign in succeeded</string>
    <string name="txt_check_infor">Check Information</string>
    <string name="create_profile">Create Profile</string>
    <string name="profile_detail_menu_name">Profile Detail</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="phone_num">Phone:</string>
    <string name="province">Province:</string>
    <string name="profile_delete_guide">If you want to delete a specific profile, enter the phone number:</string>
    <string name="profile_delete_btn_label">Delete</string>
    <string name="profile_delete_phone_hint">Enter a phone number</string>
    <string name="toast_phone_number_exist">This phone number is already used!</string>
    <string name="toast_profile_created">Profile created successfully!</string>
    <string name="toast_profile_deleted">Profile deleted successfully!</string>
    <string name="toast_profile_delete_failed">Can\'t delete profile!</string>
    <string name="account_type_choose_label">You are:</string>
    <string name="ethnic">Ethnic:</string>
    <string name="full_name">Full Name:</string>
    <string name="dob_hint">day-month-year</string>
    <string name="sex">Sex:</string>
    <string name="male_btn_grp">Male</string>
    <string name="female_btn_grp">Female</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_num_hint">Enter a phone number</string>
    <string name="cID">Citizen Identify Card:</string>
    <string name="cID_hint">Enter a valid ID</string>
    <string name="ethnic_hint">Enter your Ethnic</string>
    <string name="province_hint">Enter province/city where you\'re living</string>
    <string name="district">District:</string>
    <string name="district_hint">Enter district where you\'re living</string>
    <string name="create_profile_btn_label">Create</string>
    <string name="result_list_profile">Result:</string>
    <string name="pick_a_profile">Select a profile:</string>
    <string name="select_profile_btn_label">Select</string>
    <string name="pick_a_department">Select a department:</string>
    <string name="pick_a_day">Select day:</string>
    <string name="pick_a_time">Select time:</string>
    <string name="pick_a_time_option_1">Morning (8AM - 12PM)</string>
    <string name="pick_a_time_option_2">Afternoon (1PM - 5PM)</string>
    <string name="symptoms_description">Describe your symptoms:</string>
    <string name="symptoms_description_hint">Please describe your symptoms here</string>
    <string name="toast_add_appointment_failed">Can\'t create appointment because there is other appointment at your selected time</string>
    <string name="toast_add_appointment_succeed">Appointment created successfully, please wait for a doctor to accept it</string>
    <string name="appointment_list_search_btn_label">Search</string>
    <string name="make_an_appointment_btn_label">Create an Appointment</string>
    <string name="department_picked">Department picked:</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="appointment_time">Appointment time:</string>
    <string name="appointment_symptoms">Symptoms:</string>
    <string name="appointment_status">Appointment status:</string>
    <string name="app_status_pending">Pending</string>
    <string name="app_status_accepted">Accepted</string>
    <string name="appointment_list_menu_bar_name">Appointment List</string>
    <string name="appoint_detail_menu_bar_name">Appointment Detail</string>
    <string name="profile_doc_department">Department:</string>
    <string name="profile_doc_save_btn_label">Save change</string>
    <string name="toast_doctor_profile_created">Profile saved</string>
    <string name="profile_doc_edit_menu_bar">Edit Profile</string>
    <string name="toast_app_accepted">Appointment accepted</string>
    <string name="toast_app_rejected">Appointment rejected</string>
    <string name="app_status_rejected">Rejected</string>
    <string name="app_doctor_name">Doctor:</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_get_app_doc">Search</string>
    <string name="profile_label">Profile:</string>
    <string name="app_version_label">App version:</string>

    <string name="app_version" translatable="false"></string>
    <string name="usage_rules">Usage rules</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="customer_hotline">Customer care hotline: 1800.9999</string>
</resources>