<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_bar"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_to_doc_profile"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="0.05"
            android:src="@drawable/nav_back" />

        <TextView
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile_doc_edit_menu_bar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/doc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/edit_doc_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/doc_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/sex" />

        <RadioGroup
            android:id="@+id/radio_btn_doc_sex_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btn_sex_doc_opt_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:text="@string/male_btn_grp" />

            <RadioButton
                android:id="@+id/radio_btn_sex_doc_opt_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/female_btn_grp" />
        </RadioGroup>

        <TextView
            android:id="@+id/doc_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/profile_doc_department" />

        <Spinner
            android:id="@+id/doc_department_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"/>

        <Button
            android:id="@+id/profile_doc_detail_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/profile_doc_save_btn_label" />
    </LinearLayout>
</LinearLayout>