<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/img_lcd"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_to_doc_profile"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_back"
            android:layout_gravity="center"
            android:layout_weight="0.05" />

        <TextView
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile_doc_edit_menu_bar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/edit_tv_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/tv_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/date_of_birth" />

        <EditText
            android:id="@+id/edit_tv_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:paddingTop="10dp"
            android:inputType="date"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/sex" />

        <RadioGroup
            android:id="@+id/btn_grp_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:text="@string/male_btn_grp" />

            <RadioButton
                android:id="@+id/radio_btn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/female_btn_grp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/phone_num" />

        <EditText
            android:id="@+id/edit_tv_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:inputType="phone"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/tv_citizen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/cID" />

        <EditText
            android:id="@+id/edit_tv_citizen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/tv_ethnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/ethnic" />

        <EditText
            android:id="@+id/edit_tv_ethnic"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/tv_provint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/province" />

        <EditText
            android:id="@+id/edit_tv_province"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/tv_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/district" />

        <EditText
            android:id="@+id/edit_tv_district"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_background"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/save_profile_detail_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/profile_doc_save_btn_label" />

    </LinearLayout>
</LinearLayout>